feat: done view shared video and share video
