# ytb-video-sharing-app-be/internal/routes/router.go
@@ -14,11 +14,13 @@ type Router struct {
 func NewRouter(
 	router *gin.Engine,
 	accountHandler *handler.AccountHandler,
+	videoHandler *handler.VideoHandler,
 	middleware *middleware.JwtAuthenticationMiddleware,
 ) *Router {
 	apiV1Group := router.Group("/api/v1")
 
 	registerAccountEndpoint(accountHandler, apiV1Group, middleware)
+	registerVideoEndpoint(videoHandler, apiV1Group, middleware)
 
 	return &Router{
 		Router: router,
@@ -30,7 +32,13 @@ func registerAccountEndpoint(accountHandler *handler.AccountHandler, group *gin.
 
 	accountGroup.POST("/register", middleware.ValidateRequest[dto.CreateAccountRequest](), accountHandler.Register)
 	accountGroup.POST("/login", middleware.ValidateRequest[dto.LoginRequest](), accountHandler.Login)
-	// TODO: add middleware handle access token
 	accountGroup.POST("/logout/:accountID", middleware.JWTAuthMiddleware(params), accountHandler.Logout)
-	accountGroup.POST("/refresh-token/:accountID", accountHandler.RefreshToken)
+	accountGroup.POST("/refresh-token", middleware.JWTRefreshTokenMiddleware(params), accountHandler.RefreshToken)
+}
+
+func registerVideoEndpoint(videoHandler *handler.VideoHandler, group *gin.RouterGroup, params *middleware.JwtAuthenticationMiddleware) {
+	videoGroup := group.Group("/videos")
+
+	videoGroup.POST("", middleware.JWTAuthMiddleware(params), middleware.ValidateRequest[dto.ShareVideoRequest](), videoHandler.ShareVideo)
+	videoGroup.GET("", videoHandler.GetListVideos)
 }
